fix highlightbox display in IE7/8 (div was too wide) on checkout_confirmation
git-svn-id: https://xtcmodified.svn.sourceforge.net/svnroot/xtcmodified/trunk@182 25741c12-d480-4641-b65d-acd752be3b7f

--- a/templates/xtc5/stylesheet.css
+++ b/templates/xtc5/stylesheet.css
@@ -671,7 +671,8 @@ body.popupprintorder .totalprice {
 div.highlightbox {
 	padding: 15px;
 	background-color:#f8f8f8;
-	border: solid #d9d9d9 1px
+	border: solid #d9d9d9 1px;
+	overflow:auto
 }
 div.highlightbox ul {
 	margin-left:15px;
